WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69456
Fix CueParser to match changes in ThreadableLoaderClient
https://bugs.webkit.org/show_bug.cgi?id=69456
Summary
Fix CueParser to match changes in ThreadableLoaderClient
Anna Cavender
Reported
2011-10-05 13:15:47 PDT
Changes the signature of didFinishLoading(). Note: even though this class will change later, this quick fix is needed to turn the ENABLE_VIDEO_TRACK on for chrome.
Attachments
Patch
(1.97 KB, patch)
2011-10-05 13:23 PDT
,
Anna Cavender
no flags
Details
Formatted Diff
Diff
Patch
(2.24 KB, patch)
2011-10-05 13:32 PDT
,
Anna Cavender
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anna Cavender
Comment 1
2011-10-05 13:23:10 PDT
Created
attachment 109846
[details]
Patch
David Levin
Comment 2
2011-10-05 13:30:14 PDT
Comment on
attachment 109846
[details]
Patch virtual as discussed.
Anna Cavender
Comment 3
2011-10-05 13:32:49 PDT
Created
attachment 109851
[details]
Patch
Anna Cavender
Comment 4
2011-10-05 13:33:35 PDT
Thanks David!
WebKit Review Bot
Comment 5
2011-10-05 14:39:18 PDT
Comment on
attachment 109851
[details]
Patch Clearing flags on attachment: 109851 Committed
r96751
: <
http://trac.webkit.org/changeset/96751
>
WebKit Review Bot
Comment 6
2011-10-05 14:39:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug