Fix CueParser::didFinishLoading to match changes in ThreadableLoaderClient https://bugs.webkit.org/show_bug.cgi?id=69456

Reviewed by David Levin.

No new tests. No new functionality.

* html/track/CueParser.cpp:
(WebCore::CueParser::didFinishLoading):
* html/track/CueParser.h:


Canonical link: https://commits.webkit.org/85509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96751 268f45cc-cd09-0410-ab3c-d52691b4dbfc